# android-script-roi-tool

./: .gitignore  INTERACTION_MATRIX.md  QUICKSTART.md  README.md  config.json  main.py  pyproject.toml  requirements.txt  start.bat  start.py
config/: __init__.py  settings.py
src/: __init__.py
src/core/: __init__.py  auto_detect.py  crop_engine.py  export_manager.py  screenshot.py  smart_segment.py  superpixel_segment.py
src/models/: __init__.py  roi.py
src/ui/: __init__.py  image_canvas.py  main_window.py  roi_list_panel.py
src/utils/: __init__.py  helpers.py
